replace service with a lighter go version

--- a/app/Dockerfile
+++ b/app/Dockerfile
@@ -1,6 +1,10 @@
-FROM adoptopenjdk/openjdk11:jdk-11.0.2.9-slim
-WORKDIR /opt
+FROM golang:1.17-alpine
+WORKDIR /app
 ENV PORT 8080
 EXPOSE 8080
-COPY hello-service/target/*.jar /opt/app.jar
-ENTRYPOINT exec java $JAVA_OPTS -jar app.jar
+COPY hello-service/go.mod ./
+#COPY hello-service/go.sum ./
+RUN go mod download
+COPY hello-service/*.go ./
+RUN go build -o /docker-hello
+CMD [ "/docker-hello" ]
