--- a/app/helloservice/templates/deployment.yaml
+++ b/app/helloservice/templates/deployment.yaml
@@ -40,11 +40,11 @@ spec:
               protocol: TCP
           livenessProbe:
             httpGet:
-              path: /
+              path: {{ .Values.service.heartBeatUrl }}
               port: 8080
           readinessProbe:
             httpGet:
-              path: /
+              path: {{ .Values.service.heartBeatUrl }}
               port: 8080
           resources:
             {{- toYaml .Values.resources | nindent 12 }}
