--- a/app/helloservice/values.yaml
+++ b/app/helloservice/values.yaml
@@ -42,9 +42,12 @@ service:
   heartBeatUrl: /heartbeat
 
 ingress:
-  enabled: false
+  enabled: true
   className: ""
-  annotations: {}
+  annotations: {
+    kubernetes.io/ingress.class: "nginx",
+    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
+  }
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
   hosts:
