Fix app root forward for nginx

--- a/app/helloservice/values.yaml
+++ b/app/helloservice/values.yaml
@@ -53,8 +53,8 @@ ingress:
   hosts:
     - host: hello.example.com
       paths:
-        - path: /*
-          pathType: ImplementationSpecific
+        - path: /
+          pathType: Prefix
   tls: []
   #  - secretName: chart-example-tls
   #    hosts:
