--- a/app/helloservice/values.yaml
+++ b/app/helloservice/values.yaml
@@ -45,8 +45,7 @@ ingress:
   enabled: true
   className: ""
   annotations: {
-    kubernetes.io/ingress.class: "nginx",
-    nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
+    kubernetes.io/ingress.class: "istio"
   }
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
