--- a/app/helloservice/values.yaml
+++ b/app/helloservice/values.yaml
@@ -45,7 +45,7 @@ ingress:
   enabled: true
   className: ""
   annotations: {
-    kubernetes.io/ingress.class: "istio"
+    kubernetes.io/ingress.class: "nginx"
   }
     # kubernetes.io/ingress.class: nginx
     # kubernetes.io/tls-acme: "true"
